@@ -1,3 +1,4 @@
+Flow: Added friction and parabolic flow
 Fixed units for flow control
 Add the draggable sensors in front of the control panels so they can't get lost behind the control panel
 Flow: Added t-shaped drag handles to the pipe
